--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 
 [dependencies]
 raylib = { git = "https://github.com/litten2up/raylib-rs/", branch = "4.2.0"}
+structopt = {version = "0.3.26"}
